--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
   top: 0;
   right: 0;
   bottom: 0;
-  background: url('img/bg-header.jpg') center/cover no-repeat;
+  background: url('img/bg-header01.jpg') center/cover no-repeat;
   opacity: 0.4;
 }
 .content-wrap {
@@ -44,6 +44,7 @@ h1 {
 }
 h3 {
   margin-top: 15px;
+  min-height: 3em;
 }
 p {
   padding: 1em 0;
@@ -95,7 +96,7 @@ p {
 
 li {
   width: 31%;
-  padding: 10px;
+  
   background-color: #fff;
   color: #000;
   list-style-type: none;
@@ -105,11 +106,11 @@ li {
   width: 100%;
   height: auto;
   opacity: 0.6;
-  margin: 20px 0;
-  padding: 20px;
+  
 }
-img.img-small {
-  display: none;
+
+.card-content p{
+  padding: 20px;
 }
 .box {
   flex: 50%;
@@ -154,12 +155,7 @@ img.img-small {
     width: 100%;
     margin-bottom: 10px;
   }
-  .card-content img {
-    display: none;
-  }
-  .card-content .img-small {
-    display: block;
-  }
+  
   #section-d {
     flex-direction: column;
   }
